# mimetic

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  conf.py  getting-started.md  index.md  index.rst
docs/_plots/: bernoulli_response.py  categorical_response.py  failure_times_heatmap.py  gaussian_response.py  linear_predictor_eta.py  multi_event_tte.py  ordinal_response.py  poisson_response.py  random_effects_eta.py  survival_timeline.py  z_basis.py
docs/_templates/autosummary/: class.rst
docs/tutorials/: competing-risks.md  index.md  linear-predictor.md  response-distributions.md  survival.md
src/mimetic/: __init__.py  __main__.py  covariance.py  functional.py  helpers.py  pipeline.py  simulate.py  simulation.py  states.py  survival.py  tasks.py
src/simulacra/: __init__.py  covariance.py  functional.py  simulation.py  states.py  survival.py  types.py
tests/: conftest.py  test_competing_risks.py  test_covariance.py  test_functional.py  test_pipeline.py  test_simulation.py  test_survival.py
