[project]
name = "mimetic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "tensordict>=0.11.0",
    "torch>=2.10.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
